// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dialog Component - Critical Snapshot Tests matches snapshot for basic dialog 1`] = `
<button
  aria-controls="radix-_r_1a_"
  aria-expanded="false"
  aria-haspopup="dialog"
  data-state="closed"
  type="button"
>
  Open
</button>
`;

exports[`Dialog Component - Critical Snapshot Tests matches snapshot for dialog with close button 1`] = `
<button
  aria-controls="radix-_r_1g_"
  aria-expanded="false"
  aria-haspopup="dialog"
  data-state="closed"
  type="button"
>
  Open
</button>
`;

exports[`Dialog Component - Critical Snapshot Tests matches snapshot for dialog with header and footer 1`] = `
<button
  aria-controls="radix-_r_1d_"
  aria-expanded="false"
  aria-haspopup="dialog"
  data-state="closed"
  type="button"
>
  Open
</button>
`;

exports[`Dialog Component - Critical Snapshot Tests matches snapshot for large size 1`] = `
<button
  aria-controls="radix-_r_1m_"
  aria-expanded="false"
  aria-haspopup="dialog"
  data-state="closed"
  type="button"
>
  Open
</button>
`;

exports[`Dialog Component - Critical Snapshot Tests matches snapshot for small size 1`] = `
<button
  aria-controls="radix-_r_1j_"
  aria-expanded="false"
  aria-haspopup="dialog"
  data-state="closed"
  type="button"
>
  Open
</button>
`;
